--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "jumpcutter",
   "version": "1.0.0",
   "description": "A Node.js package for processing videos and audio files by handling silent sections",
-  "main": "src/JumpCutter.js",
+  "main": "main.js",
   "scripts": {
     "test": "jest",
-    "test:watch": "jest --watch"
+    "test:watch": "jest --watch",
+    "start": "electron .",
+    "build": "electron-builder"
   },
   "keywords": [
     "video",
@@ -19,10 +21,25 @@
   "license": "ISC",
   "dependencies": {
     "ffmpeg-static": "^5.2.0",
-    "fluent-ffmpeg": "^2.1.2"
+    "fluent-ffmpeg": "^2.1.2",
+    "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
+    "electron": "^34.1.1",
+    "electron-builder": "^24.9.1",
     "jest": "^29.7.0"
+  },
+  "build": {
+    "appId": "com.jumpcutter.app",
+    "mac": {
+      "category": "public.app-category.video"
+    },
+    "win": {
+      "target": "nsis"
+    },
+    "linux": {
+      "target": "AppImage"
+    }
   },
   "engines": {
     "node": ">=14.0.0"
