Fix ffmpeg-static path and add asarUnpack config

--- a/package.json
+++ b/package.json
@@ -39,7 +39,12 @@
     },
     "linux": {
       "target": "AppImage"
-    }
+    },
+    "asarUnpack": [
+      "node_modules/ffmpeg-static/bin/${os}/${arch}/ffmpeg",
+      "node_modules/ffmpeg-static/index.js",
+      "node_modules/ffmpeg-static/package.json"
+    ]
   },
   "engines": {
     "node": ">=14.0.0"
