Implement file preview with tmp and fix playback issue

--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.2",
+    "tmp-promise": "^3.0.3",
     "web-audio-api": "^0.2.2"
   },
   "devDependencies": {
@@ -44,7 +45,8 @@
     "asarUnpack": [
       "node_modules/ffmpeg-static/bin/${os}/${arch}/ffmpeg",
       "node_modules/ffmpeg-static/index.js",
-      "node_modules/ffmpeg-static/package.json"
+      "node_modules/ffmpeg-static/package.json",
+      "node_modules/tmp-promise/**/*"
     ]
   },
   "engines": {
