--- a/package.json
+++ b/package.json
@@ -4,8 +4,6 @@
   "description": "A Node.js package for processing videos and audio files by handling silent sections",
   "main": "main.js",
   "scripts": {
-    "test": "jest",
-    "test:watch": "jest --watch",
     "start": "electron .",
     "build": "electron-builder"
   },
@@ -20,6 +18,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ilhanozkan/jumpcutter": "^1.0.0",
     "ffmpeg-static": "^5.2.0",
     "ffprobe-static": "^3.1.0",
     "fluent-ffmpeg": "^2.1.2",
@@ -28,8 +27,7 @@
   },
   "devDependencies": {
     "electron": "^34.1.1",
-    "electron-builder": "^24.9.1",
-    "jest": "^29.7.0"
+    "electron-builder": "^24.9.1"
   },
   "build": {
     "appId": "com.jumpcutter.app",
